Rework na funcionalidade de ultimos reports